@@ -1,4 +1,4 @@
-Apache ManifoldCF Plugin for Apache Solr 6.x
+Apache ManifoldCF Plugin for Apache Solr 7.x
 Copyright 2010-2017 The Apache Software Foundation
 
 This product includes software developed by
