@@ -22,7 +22,7 @@ above.  It is backwards compatible with earlier versions as well, except for the
 that two additional Solr fields are required for this plugin to work.
 
 
-Instructions for Building Apache ManifoldCF Plugin for Apache Solr 6.x from Source
+Instructions for Building Apache ManifoldCF Plugin for Apache Solr 7.x from Source
 ------------------------------------------------------------------------------
 
 1. Download the Java SE 8 JDK (Java Development Kit), or greater, from
@@ -42,7 +42,7 @@ Instructions for Building Apache ManifoldCF Plugin for Apache Solr 6.x from Sour
 
    The JAR package can be found in the target folder:
 
-   target/apache-manifoldcf-solr-6.x-plugin-<VERSION>.jar where <VERSION> is the release version
+   target/apache-manifoldcf-solr-7.x-plugin-<VERSION>.jar where <VERSION> is the release version
 
 
 Getting Started
@@ -59,7 +59,7 @@ index. Depending on your schemaFactory setting in solrconfig.xml you have to
 use either the schema.xml file for 'ClassicIndexSchemaFactory' or the schema
 API for 'ManagedIndexSchemaFactory'. 
 See section 'Managed Schema Definition in SolrConfig' in the Solr Reference Gude
-https://www.apache.org/dyn/closer.cgi/lucene/solr/ref-guide/apache-solr-ref-guide-6.0.pdf
+https://www.apache.org/dyn/closer.cgi/lucene/solr/ref-guide/apache-solr-ref-guide-7.0.pdf
 
 For schema.xml simply add the following field definitions to the <schema>
 section:
@@ -191,7 +191,7 @@ you will still need to use this Solr component to modify the user query.  All yo
 Licensing
 ---------
 
-Apache ManifoldCF Plugin for Apache Solr 6.x is licensed under the
+Apache ManifoldCF Plugin for Apache Solr 7.x is licensed under the
 Apache License 2.0. See the files called LICENSE.txt and NOTICE.txt
 for more information.
 
@@ -220,7 +220,7 @@ code and source code.
 The following provides more details on the included software that
 may be subject to export controls on cryptographic software:
 
-  The Apache ManifoldCF Solr 6.x Plugin does not include any
+  The Apache ManifoldCF Solr 7.x Plugin does not include any
   implementation or usage of cryptographic software at this time.
   
 Contact
