@@ -20,12 +20,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.manifoldcf.solr</groupId>
 
-  <name>ManifoldCF Solr 6.x Plugin</name>
-  <artifactId>apache-manifoldcf-solr-6.x-plugin</artifactId>
+  <name>ManifoldCF Solr 7.x Plugin</name>
+  <artifactId>apache-manifoldcf-solr-7.x-plugin</artifactId>
   <version>2.3-SNAPSHOT</version>
   <packaging>jar</packaging>
-  <description>ManifoldCF Plugin for Apache Solr 6.x</description>
-  <inceptionYear>2016</inceptionYear>
+  <description>ManifoldCF Plugin for Apache Solr 7.x</description>
+  <inceptionYear>2017</inceptionYear>
 
   <organization>
     <name>The Apache Software Foundation</name>
@@ -34,7 +34,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <solr.version>6.3.0</solr.version>
+    <solr.version>7.0.0</solr.version>
   </properties>
 
   <dependencies>
