@@ -1,7 +1,10 @@
-Apache ManifoldCF Plugin for Apache Solr 6.x change Log
+Apache ManifoldCF Plugin for Apache Solr 7.x change Log
 $Id$
 
 ======================= 2.3-dev ======================
+
+CONNECTORS-1443: Upgrade to SolrJ 7.0.0.
+(Shinichiro Abe)
 
 CONNECTORS-1338: Upgrade to SolrJ 6.3.0.
 (Shinichiro Abe)
